--- a/deploy/ansible/playbook.yml
+++ b/deploy/ansible/playbook.yml
@@ -82,28 +82,21 @@
         ports:
           - "127.0.0.1:8000:8000"
 
-    - name: Download Caddy
-      get_url:
-        url: https://caddyserver.com/api/download?os=linux&arch=amd64
-        dest: /usr/local/bin/caddy
-        mode: '0755'
+    - name: Install Caddy GPG key
+      apt_key:
+        url: https://dl.cloudsmith.io/public/caddy/stable/gpg.key
+        state: present
 
-    - name: Create caddy user
-      user:
+    - name: Add Caddy repository
+      apt_repository:
+        repo: deb https://dl.cloudsmith.io/public/caddy/stable/deb/debian any-version main
+        state: present
+
+    - name: Install Caddy
+      apt:
         name: caddy
-        system: yes
-        shell: /usr/sbin/nologin
-        create_home: no
-
-    - name: Create Caddy directories
-      file:
-        path: "{{ item }}"
-        state: directory
-        owner: caddy
-        group: caddy
-      loop:
-        - /etc/caddy
-        - /var/lib/caddy
+        state: present
+        update_cache: yes
 
     - name: Configure Caddy
       copy:
@@ -114,34 +107,11 @@
         dest: /etc/caddy/Caddyfile
       notify: Restart Caddy
 
-    - name: Create Caddy systemd service
-      copy:
-        content: |
-          [Unit]
-          Description=Caddy
-          After=network.target
-
-          [Service]
-          User=caddy
-          Group=caddy
-          Environment=XDG_DATA_HOME=/var/lib/caddy
-          Environment=XDG_CONFIG_HOME=/var/lib/caddy
-          ExecStart=/usr/local/bin/caddy run --config /etc/caddy/Caddyfile
-          ExecReload=/usr/local/bin/caddy reload --config /etc/caddy/Caddyfile
-          Restart=on-failure
-          AmbientCapabilities=CAP_NET_BIND_SERVICE
-
-          [Install]
-          WantedBy=multi-user.target
-        dest: /etc/systemd/system/caddy.service
-      notify: Restart Caddy
-
     - name: Start Caddy service
       systemd:
         name: caddy
         state: started
         enabled: yes
-        daemon_reload: yes
 
   handlers:
     - name: Restart Caddy
